--- a/html/style.css
+++ b/html/style.css
@@ -1,6 +1,6 @@
 body {
-    color: #777;
-    font-family: Futura, 'Futura Std', 'Oswald', sans-serif;
+  color: #777;
+  font-family: Futura, 'Futura Std', 'Oswald', sans-serif;
 }
 
 .alert { background-color: #923130; }
@@ -8,12 +8,51 @@ body {
 .yay   { background-color: #319230; }
 
 #announcement {
-    color: #eeeeee;
-    font-size: 120%;
-    text-align: center;
-    padding: 0.5em 0;
+  color: #eeeeee;
+  font-size: 120%;
+  text-align: center;
+  padding: 0.5em 0;
 }
 
 .mv-navbar {
-    margin-bottom: 0;
+  margin-bottom: 0;
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+}
+
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #888;
+  }
+}
+
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+}
+.nav-sidebar > li > a {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.nav-sidebar > .active > a,
+.nav-sidebar > .active > a:hover,
+.nav-sidebar > .active > a:focus {
+  color: #fff;
+  background-color: #428bca;
 }
